<resources>
    <string name="app_name">MovieTmdb</string>
    <string name="choose_genre">Choose Genre</string>
    <string name="movie_list">Movie List</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="release_date">Release date</string>
    <string name="language">Language</string>
    <string name="label_overview">Overview</string>
    <string name="cast">The Cast</string>
    <string name="trailers">Trailers</string>
    <string name="user_reviews">User Reviews</string>
    <string name="action_retry">Retry</string>
    <string name="label_votes">" votes"</string>
</resources>
